<resources>
    <string name="app_name">CDCsvParser</string>
    <string name="welcome_message">Welcome to CDCsvParser</string>
    <string name="upload_file">Upload new File</string>
    <string name="history_text">Or select one of your old uploads:</string>
    <string name="history">History</string>
    <string name="assets_value_label">Value of assets:</string>
    <string name="euro_sign" translatable="false">€</string>
    <string name="money_spent_label">Money spent</string>
    <string name="profit_loss">Profit/Loss</string>
    <string name="rewards_earned">Rewards earned</string>
    <string name="filter_by_asset">Filter by asset</string>
    <string name="all_transactions">All transactions</string>
    <string name="choose_asset">choose asset</string>
    <string name="amount_of_asset">Amount of asset</string>
    <string name="all_transactions_regarding">"All transactions regarding %s"</string>
    <string name="history_delete_title">Delete file?</string>
    <string name="history_delete_message">The file is removed from this device and cannot be restored.</string>
    <string name="history_deleted">File deleted</string>
    <string name="overview_charts">Charts</string>
    <string name="series_spent">Spent</string>
    <string name="series_portfolio_value">Portfolio value</string>
    <string name="series_bonus">Rewards</string>
    <string name="timeframe_week">Week</string>
    <string name="timeframe_month">Month</string>
    <string name="timeframe_quarter">Quarter</string>
    <string name="timeframe_year">Year</string>
    <string name="chart_no_data">No data for this selection.</string>
    <string name="chart_history_loading">Price history: %1$d of %2$d …</string>
    <string name="chart_history_estimated_note">Dashed section: estimated — the free price history only goes back ~1 year.</string>
    <string name="range_all">All</string>
    <string name="range_three_months">3M</string>
    <string name="range_six_months">6M</string>
    <string name="range_one_year">1Y</string>
    <string name="range_two_years">2Y</string>
    <string name="range_five_years">5Y</string>
    <string name="range_custom">Custom range</string>
    <string name="range_active">%1$s – %2$s</string>
    <string name="range_start">Start</string>
    <string name="range_end">End</string>
    <string name="range_apply">Apply</string>
    <string name="range_cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="api_keys_section">Price API keys</string>
    <string name="api_keys_help">Optional. Sent only to the price APIs (CoinGecko / CryptoCompare). Leave empty for the keyless defaults.</string>
    <string name="cg_key_label">CoinGecko API key</string>
    <string name="cc_key_label">CryptoCompare API key</string>
    <string name="show_key">Show key</string>
    <string name="hide_key">Hide key</string>
    <string name="clear_key">Clear</string>
    <string name="delete_price_caches">Delete price caches</string>
    <string name="delete_price_caches_question">Deletes the downloaded price history and the symbol cache. The next parse re-downloads the history; the CSV imports are not touched.</string>
    <string name="caches_deleted">Price caches deleted.</string>
    <string name="caches_already_empty">No price caches to delete.</string>
    <string name="type_purchase">Purchase</string>
    <string name="type_income">Income</string>
    <string name="type_debit">Withdrawal</string>
    <string name="type_other">Other</string>
    <string name="delete">Delete</string>
    <string name="priceAttribution">Prices provided by \n<a href="https://www.bitstamp.net/">Bitstamp</a>, <a href="https://min-api.cryptocompare.com/">CryptoCompare API</a>, <a href="https://www.kraken.com/">Kraken</a> &amp; <a href="https://www.coingecko.com/">CoinGecko</a></string>
    <string name="settings">Settings</string>
    <string name="use_strict_wallet_type">Use strict wallet type(Only for card)</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="signup"><u>Signup</u></string>
    <string name="error_login_failed">Login failed</string>
    <string name="error_empty_fields">Please fill out all fileds</string>
    <string name="load_latest_from_database">Load latest from Database</string>
    <string name="error_signup_email_empty">Signup failed: Email empty</string>
    <string name="error_signup_pw_empty">Signup failed: Password empty</string>
    <string name="error_signup_pw_to_short">Signup failed: Password too short, min 6 characters</string>
    <string name="error_signup_failed">\"Signup failed: \"</string>
    <string name="use_app_without_login">Use App without Login</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="password_forgotten"><u>Password forgotten</u></string>
    <string name="error_noEmail">Please enter your email address</string>
    <string name="title_activity_starting">StartingActivity</string>
    <string name="allow_permissions_for_storage">Allow Permissions for Storage</string>
    <string name="title_activity_transaction">TransactionActivity</string>
    <string name="transaction_type">Type</string>
    <string name="default_date" translatable="false">01.01.1970</string>
    <string name="amount">Amount:</string>
    <string name="to_amount">to Amount:</string>
    <string name="transaction_hash">Transaction Hash:</string>
    <string name="about_us">About Us</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="cdcsvparser" translatable="false">CDCsvParser</string>
    <string name="please_wait">Please Wait…</string>
    <string name="contributers">Contributors:</string>
    <string name="names">Names:</string>
    <string name="bicha_stefan_friehs_noah_dennig_rosa" translatable="false">Bicha Stefan, Friehs Noah, Dennig Rosa</string>
    <string name="git">Git:</string>
    <string name="git_bicha" translatable="false">https://git-iit.fh-joanneum.at/bichaste20</string>
    <string name="git_noah" translatable="false">https://git-iit.fh-joanneum.at/d01m67</string>
    <string name="git_rosa" translatable="false">https://git-iit.fh-joanneum.at/s63q65</string>
    <string name="support_string">If you want to support us (the contributors) please use the BTC or ETH adresses provided below.</string>
    <string name="btc_adress" translatable="false">BTC: bc1qcw8gyljlwhcndq62mhtsktg6n7j7mp83carnjc</string>
    <string name="eth_adress" translatable="false">ETH: 0xAF88D27efeF8a656a2ce7044847445467a8a9C7b</string>
    <string name="hope_useful_string">We hope our app is userful and easy to use! :)</string>
    <string name="problem_contact_string">If you found a bug or ran into a problem feel free to contact us under:</string>
    <string name="cdcsvparser_gmail" translatable="false"><u>cdcsvparser@gmail.com</u></string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="logoutQuestion">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleteQuestion">"Are you sure you want to delete your account?"</string>
    <string name="user_needs_to_autheticate">User needs to reauthenticate.</string>

    <string name="permission_needed">Permission needed</string>
    <string name="permission_needed_text">Permission needed to read files to be able to load the file into the app.</string>
    <string name="permission_denied">Permission denied, you can\'t use the App without it.</string>
    <string name="filter_coin_list">filter coin list</string>
    <string name="sort_by">sort by:</string>
    <string name="sort_amount">amount €</string>
    <string name="sort_amount_asset">amount Asset</string>
    <string name="sort_percent">percent</string>
    <string name="sort_transactions">transactions</string>
    <string name="sort_asc">ASC</string>
    <string name="sort_desc">DESC</string>
    <string name="transaction_s">transaction(s)</string>
    <string name="amounttransactions_placeholder">amountTransactions</string>
    <string name="in">in</string>
    <string name="percentprofit_placerholder">percentProfit</string>
    <string name="amountvalue_placeholder">amountValue</string>
    <string name="eg">~</string>
    <string name="currency_type_placeholder">Currency Type</string>
    <string name="btc_placeholder">BTC</string>
    <string name="date_placeholder">Date</string>
    <string name="descriptionvalue_placeholder">descriptionValue</string>
    <string name="assetvalue_placeholder">assetValue</string>
    <string name="asset_amount">Asset Amount:</string>
    <string name="description">Description:</string>
    <string name="store_data_local_needed_for_faststart">Store data local(needed for FastStart)</string>
    <string name="enable_faststart">Enable FastStart</string>
    <string name="overview_tab_crypto_text">Crypto</string>
    <string name="overview_tab_card_text">Card</string>
    <string name="user_deleted">Account has been deleted</string>

    <string name="parsing_timeout">Parsing did not finish in time</string>
    <string name="error_while_parsing">Error while parsing</string>
    <string name="error_saving_data">Error saving data</string>
    <string name="password_reset_email_sent">Password reset email sent</string>
    <string name="unparsable_lines_skipped" formatted="false">Unparsable lines were skipped: %1$d</string>
    <string name="parsing_text">Parsing your file…</string>
    <string name="metric_value_placeholder">0 €</string>
    <string name="search_hint">Search transactions</string>
    <string name="filter_all">All</string>
    <string name="allocation_title">Portfolio allocation</string>
    <string name="no_allocation_data">No values to chart yet</string>
    <string name="app_type_label">App type</string>
    <string name="core_mode_label">Calculator</string>
    <string name="file_history_placeholder">No files yet</string>
</resources>
