<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.AboutUsActivity">

    <TextView
        android:id="@+id/tv_contributers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_text_start_end_margin"
        android:layout_marginTop="@dimen/basic_text_start_end_margin"
        android:text="@string/contributers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nameString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_text_second_level_start_margin"
        android:layout_marginTop="@dimen/about_us_small_margin_top"
        android:text="@string/names"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_contributers" />

    <TextView
        android:id="@+id/tv_contributers_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_text_third_level_start_margin"
        android:layout_marginTop="@dimen/about_us_small_margin_top"
        android:text="@string/bicha_stefan_friehs_noah_dennig_rosa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nameString" />

    <TextView
        android:id="@+id/gitString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_text_second_level_start_margin"
        android:layout_marginTop="@dimen/about_us_small_margin_top"
        android:text="@string/git"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_contributers_names" />

    <TextView
        android:id="@+id/tv_contributers_git_stefan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_text_third_level_start_margin"
        android:layout_marginTop="@dimen/about_us_small_margin_top"
        android:text="@string/git_bicha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gitString" />

    <TextView
        android:id="@+id/tv_contributers_git_noah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_text_third_level_start_margin"
        android:layout_marginTop="@dimen/about_us_small_margin_top"
        android:text="@string/git_noah"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_contributers_git_stefan" />

    <TextView
        android:id="@+id/tv_contributers_git_rosa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_text_third_level_start_margin"
        android:layout_marginTop="@dimen/about_us_small_margin_top"
        android:text="@string/git_rosa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_contributers_git_noah" />

    <TextView
        android:id="@+id/tv_supportString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_text_start_end_margin"
        android:layout_marginTop="@dimen/about_us_big_margin_top"
        android:layout_marginEnd="@dimen/basic_text_start_end_margin"
        android:text="@string/support_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_contributers_git_rosa" />

    <TextView
        android:id="@+id/tv_BTCadress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_text_start_end_margin"
        android:layout_marginTop="@dimen/about_us_middle_margin_top"
        android:layout_marginEnd="@dimen/basic_text_start_end_margin"
        android:text="@string/btc_adress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_supportString" />

    <TextView
        android:id="@+id/tv_ETHadress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_text_start_end_margin"
        android:layout_marginTop="@dimen/about_us_small_margin_top"
        android:layout_marginEnd="@dimen/basic_text_start_end_margin"
        android:text="@string/eth_adress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_BTCadress" />


    <TextView
        android:id="@+id/tv_hopesString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_text_start_end_margin"
        android:layout_marginTop="@dimen/about_us_big_margin_top"
        android:layout_marginEnd="@dimen/basic_text_start_end_margin"
        android:text="@string/hope_useful_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ETHadress" />

    <TextView
        android:id="@+id/tv_whishesString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_text_start_end_margin"
        android:layout_marginTop="@dimen/about_us_small_margin_top"
        android:layout_marginEnd="@dimen/basic_text_start_end_margin"
        android:text="@string/problem_contact_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hopesString" />

    <TextView
        android:id="@+id/tv_mailString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_text_start_end_margin"
        android:layout_marginTop="@dimen/about_us_small_margin_top"
        android:layout_marginEnd="@dimen/basic_text_start_end_margin"
        android:text="@string/cdcsvparser_gmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_whishesString" />


</androidx.constraintlayout.widget.ConstraintLayout>